--- a/blogpost.html
+++ b/blogpost.html
@@ -4,6 +4,9 @@
 <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
+        <div> id="cabecera"
+                        cabece
+        </div>
         <h1>haremos un blog post</h1>
         <p> parrafo de inicio</p>
     </body>
